# tp_3_modelisation_par_agent

./: Cargo.toml
racman_app/: Cargo.toml  config.json  trace.csv
racman_app/src/: main.rs  user_config.rs
racman_lib/: Cargo.toml
racman_lib/src/: lib.rs
racman_lib/src/core/: agent.rs  constants.rs  coordinate.rs  environment.rs  mod.rs  sma.rs
racman_lib/src/world/: mod.rs
racman_lib/src/world/pacman/: ghost.rs  maze.rs  mod.rs  player.rs  wall.rs
racman_lib/src/world/particle/: mod.rs
