[package]
name = "racman_app"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9.3"
serde_derive = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
lazy_static = "1.4.0"
nannou = "0.12.0"
racman_lib = {path = "../racman_lib"}